--- a/tema3/тема3 (5).md
+++ b/tema3/тема3 (5).md
@@ -38,7 +38,7 @@ else:
 ```
 Результат.
 
-![skriny](https://github.com/Aganyaz62/Python/blob/main/skriny/tema3/lab1.png)
+![skriny](https://github.com/Ahmadjon0099/python/blob/main/tema3/skriny/lab1.jpg)
 
 Выводы.
 
