--- a/tema3/тема3 (5).md
+++ b/tema3/тема3 (5).md
@@ -40,6 +40,7 @@ else:
 
 ![skriny](https://github.com/Ahmadjon0099/python/blob/main/tema3/skriny/lab1.jpg)
 
+![skriny](https://github.com/Ahmadjon0099/python/blob/main/tema3/skriny/lab1.jpg)
 Выводы.
 
 Программа считывает два числа, сравнивает их и выводит:
