--- a/tema3/тема3 (5).md
+++ b/tema3/тема3 (5).md
@@ -3,7 +3,7 @@
 
 Отчет по Теме #3 выполнил:
 
-Хорасанлыев Аганяз 
+Сирожиддинов А.И 
 
 ПИЭ-23-1
 
@@ -37,8 +37,6 @@ else:
     print("не выполняется")
 ```
 Результат.
-
-![skriny](https://github.com/Ahmadjon0099/python/blob/main/tema3/skriny/lab1.jpg)
 
 ![skriny](https://github.com/Ahmadjon0099/python/blob/main/tema3/skriny/lab1.jpg)
 Выводы.
