--- a/T2/T2.md
+++ b/T2/T2.md
@@ -2,7 +2,7 @@
 
 Отчет по Теме #2 выполнил:
 
-Хорасанлыев Аганяз 
+Сирожиддинов А И
 
 ПИЭ-23-1
 
@@ -31,7 +31,7 @@ print (1.23)
 ```
 Результат.
 
-![T2](https://github.com/Ahmadjon0099/Python/blob/main/t2/l1.png)
+![T2](https://)
 
 Выводы.
 
