--- a/T4/тема4.md
+++ b/T4/тема4.md
@@ -3,7 +3,7 @@
 
 Отчет по Теме #4 выполнил:
 
-Хорасанлыев Аганяз 
+Сирожиддинов А И 
 
 ПИЭ-23-1
 
@@ -33,7 +33,7 @@ if __name__=='__main__':
 ```
 Результат.
 
-![skriny](https://github.com/Aganyaz62/Python/blob/main/skriny/tema4/lab1.png)
+![T4](https://github.com/Ahmadjon0099/python/blob/main/T4/lab1.png)
 
 Выводы.
 1. if __name__ == '__main__':: Проверяет, был ли файл запущен напрямую (как основная программа).
