--- a/T5/T5.md
+++ b/T5/T5.md
@@ -2,7 +2,7 @@
 
 Отчет по Теме #5 выполнил:
 
-Хорасанлыев Аганяз 
+Сирожиддинов А И 
 
 ПИЭ-23-1
 
@@ -31,7 +31,7 @@ print(set_1 - set_2)
 ```
 Результат.
 
-![skriny](https://github.com/Aganyaz62/Python/blob/main/skriny/tema5/lab1.png)
+![skriny](https://github.com/Ahmadjon0099/python/blob/main/T5/cam1.png)
 
 Выводы.
 Оператор - (разность множеств) возвращает новое множество, содержащее все элементы, которые присутствуют в первом множестве (set_1) и отсутствуют во втором множестве (set_2).
